Add Recipe-based getRecipeOutput helper